--- a/myneighbour/templates/navbar.html
+++ b/myneighbour/templates/navbar.html
@@ -1,6 +1,34 @@
 <nav class="navbar navbar-expand-lg navbar-dark " style="background-color: rgb(17, 14, 16);">
     <div class="container">
         <a class="navbar-brand" href="{% url 'home' %}">Bronx</a>
+
+  <!-- Collapsible content -->
+  <div class="collapse navbar-collapse" id="basicExampleNav">
+    <!-- Links -->
+    <div class="">
+
+      <li class="dropdown btn btn-default">
+        <a href="#" class="dropdown-toggle btn btn-default" data-toggle="dropdown"><i class="fa fa-home text-white"style="size: 12px;"></i>
+
+        </a>
+        <ul class="dropdown-menu " role="menu" style=" text-decoration: none; ">
+
+          <li class="" >
+            <a class="btn btn-default" href="/">Home</a>
+          </li>
+          <li>
+            <a class="btn btn-default" href="{% url 'hood' %}">Hood</a>
+          </li>
+
+          
+        </ul>
+      </li>
+
+
+    </div>
+
+    
+  </div>
         <div class="collapse navbar-collapse text-dark" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 {% if user.is_authenticated %}
