--- a/myneighbour/templates/business.html
+++ b/myneighbour/templates/business.html
@@ -1,23 +1,33 @@
-{% extends 'base.html' %}
+{%extends 'base.html'%}
+{% load static %}
+{% load bootstrap4 %}
+{% block styles %}
+{{ block.super}}
+<link rel="stylesheet" href="{% static 'css/index.css' %}">
+{% endblock %}
+
 {% block content %}
-
+<style>
+    body{
+    font-family: 'Lato', global_font_string;
+    font-weight: 500;
+    background-color: #595d64;
+    color: whitesmoke;
+    }
+    h3{
+        color:crimson
+    }
+    
+</style>
+<br><br>
 <div class="container">
-    <br>
-    <h2 class="text-center">Businesses in the Hood</h2>
-    <div class="row">
-        {% for biz in business %}
-        <div class=" col-sm-12 col-lg-4 mb-5">
-            <div class="card">
-                <div class="mt-3 ml-3 mr-3">
-                    <p><b>Business Name:</b> {{biz.name}}</p>
-                    <p><b>Description:</b> {{biz.description}}</p>
-                    <p><b>Email:</b> {{biz.email}}</p>
-                    <p><b>Hood:</b> {{biz.neighbourhood}}</p>
-                </div>
-            </div>
+    <div class="box">
+        <div class="text-center">
+        <div class="title">
+            <h3>New Business</h3>
         </div>
-
-        {% endfor %}
+        <hr>
+        </div>
     </div>
 </div>
-{%endblock%}
+{% endblock %}
