--- a/myneighbour/templates/home.html
+++ b/myneighbour/templates/home.html
@@ -11,8 +11,7 @@
   <title>Document</title>
 </head>
 
-<body
-  style="background-image: url(/static/img/flow.jpeg);">
+<body>
   <div class="container">
     <div class="text text-center" style="margin-top:15%">
       <h2 style="margin-top:6%">Welcome to Bronx🏴 </h2>
