--- a/myneighbour/templates/base.html
+++ b/myneighbour/templates/base.html
@@ -1,15 +1,14 @@
-{% load bootstrap4 %}
-{% load static%}
+{% load bootstrap4 %} {% load static%}
 <!DOCTYPE html>
 <html>
 
 <head>
     <meta charset="utf-8"> {% if title %}
-    <title>  - {{title}}</title>
+    <title>- {{title}}</title>
     {% else %}
-    <title> Bronx Hood</title>
-    {% endif %} {% block styles %}
-    <link rel="stylesheet" href="{% static 'css/st.css' %}">
+    <title> Bronx hood </title>
+    {% endif %} {% block styles %} {% bootstrap_css %}
+    <link rel="stylesheet" href="{% static 'css/index.css' %}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=The+Nautigal:wght@900&display=swap" rel="stylesheet"> {% endblock %}
@@ -20,7 +19,7 @@
     {% include "navbar.html" %} {% block content %}
     <h1 class='text-center'></h1> {%endblock%} {% block scripts %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-     {% endblock %}
+    {% bootstrap_javascript %} {% endblock %}
 </body>
 
 </html>
