deployment to heroku3

--- a/myneighbour/templates/search.html
+++ b/myneighbour/templates/search.html
@@ -18,7 +18,7 @@
                     <div class="card">
                         <div class="card-body">
                             <p class="card-text">{{biz.name}}</p>
-                            <p class="card-text">{{biz.email}}</p>
+hn;                            <p class="card-text">{{biz.email}}</p>
                             <p class="card-text">{{biz.description}}</p>
                             <p class="card-text">{{biz.neighbourhood}}</p>
                         </div>
