--- a/myneighbour/templates/base.html
+++ b/myneighbour/templates/base.html
@@ -1,4 +1,4 @@
-{% load bootstrap4 %} {% load static%}
+{% load static%}
 <!DOCTYPE html>
 <html>
 
@@ -7,7 +7,7 @@
     <title>- {{title}}</title>
     {% else %}
     <title> Bronx hood </title>
-    {% endif %} {% block styles %} {% bootstrap_css %}
+    {% endif %} {% block styles %}
     <link rel="stylesheet" href="{% static 'css/index.css' %}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
